Add PropertyConverter support for non-zero default primitive values.

Add non-zero PropertyConverterTest default primitive values.
(the revised test fails without the fix in this CL)

BUG=681233
TEST=Automated; further mash work relies on this functionality.
R=sky@chromium.org

Review-Url: https://codereview.chromium.org/2635983005
Cr-Commit-Position: refs/heads/master@{#444462}

Former-commit-id: 78697424ef7db4e0c3cdc55b2b628a460a063140